// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App does not add the same item twice 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="menu-summary"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-6 menu-summary-left"
          >
            <span>
              1
               items
            </span>
          </div>
          <div
            class="col-6 menu-summary-right"
          >
            1
            x 
            <span
              class="dietary"
            >
              dietary-a
            </span>
            1
            x 
            <span
              class="dietary"
            >
              dietary-b
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container menu-builder"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        >
          <div
            class="filters"
          >
            <input
              class="form-control"
              placeholder="Name"
              value=""
            />
          </div>
          <ul
            class="item-picker"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                This is name!
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
                <span
                  class="dietary"
                >
                  dietary-c
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                Test3
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
              </p>
            </li>
          </ul>
        </div>
        <div
          class="col-8"
        >
          <h2>
            Menu preview
          </h2>
          <ul
            class="menu-preview"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
              <button
                class="remove-item"
                type="button"
              >
                x
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders items for selection 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="menu-summary"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-6 menu-summary-left"
          >
            <span>
              0
               items
            </span>
          </div>
          <div
            class="col-6 menu-summary-right"
          />
        </div>
      </div>
    </div>
    <div
      class="container menu-builder"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        >
          <div
            class="filters"
          >
            <input
              class="form-control"
              placeholder="Name"
              value=""
            />
          </div>
          <ul
            class="item-picker"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                This is name!
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
                <span
                  class="dietary"
                >
                  dietary-c
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                Test3
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
              </p>
            </li>
          </ul>
        </div>
        <div
          class="col-8"
        >
          <h2>
            Menu preview
          </h2>
          <ul
            class="menu-preview"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App select multiple items and removes item 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="menu-summary"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-6 menu-summary-left"
          >
            <span>
              1
               items
            </span>
          </div>
          <div
            class="col-6 menu-summary-right"
          >
            1
            x 
            <span
              class="dietary"
            >
              dietary-a
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container menu-builder"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        >
          <div
            class="filters"
          >
            <input
              class="form-control"
              placeholder="Name"
              value=""
            />
          </div>
          <ul
            class="item-picker"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                This is name!
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
                <span
                  class="dietary"
                >
                  dietary-c
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                Test3
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
              </p>
            </li>
          </ul>
        </div>
        <div
          class="col-8"
        >
          <h2>
            Menu preview
          </h2>
          <ul
            class="menu-preview"
          >
            <li
              class="item"
            >
              <h2>
                Test3
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
              </p>
              <button
                class="remove-item"
                type="button"
              >
                x
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App selects item, show number of items, show selected dietaries 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="menu-summary"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-6 menu-summary-left"
          >
            <span>
              1
               items
            </span>
          </div>
          <div
            class="col-6 menu-summary-right"
          >
            1
            x 
            <span
              class="dietary"
            >
              dietary-a
            </span>
            1
            x 
            <span
              class="dietary"
            >
              dietary-b
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container menu-builder"
    >
      <div
        class="row"
      >
        <div
          class="col-4"
        >
          <div
            class="filters"
          >
            <input
              class="form-control"
              placeholder="Name"
              value=""
            />
          </div>
          <ul
            class="item-picker"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                This is name!
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
                <span
                  class="dietary"
                >
                  dietary-c
                </span>
              </p>
            </li>
            <li
              class="item"
            >
              <h2>
                Test3
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
              </p>
            </li>
          </ul>
        </div>
        <div
          class="col-8"
        >
          <h2>
            Menu preview
          </h2>
          <ul
            class="menu-preview"
          >
            <li
              class="item"
            >
              <h2>
                Test1
              </h2>
              <p>
                <span
                  class="dietary"
                >
                  dietary-a
                </span>
                <span
                  class="dietary"
                >
                  dietary-b
                </span>
              </p>
              <button
                class="remove-item"
                type="button"
              >
                x
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
